import 'react-native';
import React from 'react';
import renderer from 'react-test-renderer';
import { shallow } from 'enzyme';
import configureStore from 'redux-mock-store';

import '../../mocks/firebase';
import { CreditCardForm } from '../CreditCardForm';

describe('CreditCardForm', () => {
    it('should render correctly', () => {
        const props = {
            navigation: { state: { params: {} } }
        };
        const render = shallow(<CreditCardForm {...props} />);
        expect(render).toMatchSnapshot();
    });
    it('should render correctly with card', () => {
        const props = {
            navigation: { state: { params: { card: { last4: '4242' } } } }
        };
        const render = shallow(<CreditCardForm {...props} />);
        expect(render).toMatchSnapshot();
    });
});
